--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'commons-io:commons-io:2.6'
+    implementation 'org.apache.commons:commons-lang3:3.6'
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'com.google.code.gson:gson:2.8.6'
     annotationProcessor "androidx.room:room-compiler:$room_version"
